--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -147,7 +147,7 @@ target-version = "py39"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "LOG", "UP", "T10", "ISC", "ICN", "LOG", "G", "PIE", "PT", "Q", "RSE", "FURB", "RUF"]
-ignore = ["E712", "E501", "UP006", "UP035","PIE790", "PT004", "RUF005", "RUF006", "RUF012", "ISC001"]
+ignore = ["E712", "E501", "UP006", "UP035","PIE790", "RUF005", "RUF006", "RUF012", "ISC001"]
 
 [tool.ruff.lint.isort]
 combine-as-imports = true
